k8s/11-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: podcast-generator
spec:
  selector:
    app: web
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: podcast-generator
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: podcast-generator
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "true"
    # Add this line to prevent IP changes:
    service.beta.kubernetes.io/do-loadbalancer-floating-ip: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  selector:
    app: nginx
